introduce benchmarks and tests for txmap